panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__relational-ops__test_char_sign_extend.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/relational-ops/test_char_sign_extend.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/relational-ops/test_char_sign_extend.c"
   (function-definition external
      main~0 `fn() -> int`
      (compound-statement
         (definition c~2 `char` (truncate `char` (128 `int`)))
         (definition x~3 `unsigned int` (noop-type-conversion `unsigned int` (200 `int`)))
         (return (add `int` (less `int` (sign-extend `int` (c~2 `char`)) (0 `int`)) (greater `int` (sign-extend `unsigned int` (c~2 `char`)) (x~3 `unsigned int`)))))))

----- stderr -----
