panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__relational-ops__test_int_compare.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/relational-ops/test_int_compare.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/relational-ops/test_int_compare.c"
   (function-definition external
      main~0 `fn() -> int`
      (compound-statement
         (definition a~2 `int` (42 `int`))
         (definition b~3 `int` (27 `int`))
         (return (add `int` (less `int` (a~2 `int`) (add `int` (a~2 `int`) (b~3 `int`))) (greater `int` (a~2 `int`) (b~3 `int`)))))))

----- stderr -----
