panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__relational-ops__test_long_compare.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/relational-ops/test_long_compare.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/relational-ops/test_long_compare.c"
   (function-definition external
      main~0 `fn() -> int`
      (compound-statement
         (definition i1~2 `int` (42 `int`))
         (definition i2~3 `int` (27 `int`))
         (definition p1~4 `long` (sign-extend `long` (5 `int`)))
         (definition p2~5 `long` (sign-extend `long` (6 `int`)))
         (return (add `int` (add `int` (add `int` (not-equal `int` (p1~4 `long`) (sign-extend `long` (i1~2 `int`))) (not-equal `int` (p2~5 `long`) (sign-extend `long` (i2~3 `int`)))) (equal `int` (add `long` (p1~4 `long`) (sign-extend `long` (1 `int`))) (p2~5 `long`))) (equal `int` (subtract `long` (p2~5 `long`) (sign-extend `long` (1 `int`))) (p1~4 `long`)))))))

----- stderr -----
