panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__relational-ops__test_signed_greater_equal.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/relational-ops/test_signed_greater_equal.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (return (greater-equal (42 `int`) (42 `int`) `int`)))))

----- stderr -----
