panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__relational-ops__test_signed_less_equal.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/relational-ops/test_signed_less_equal.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/relational-ops/test_signed_less_equal.c"
   (function-definition external
      main~0 `fn() -> int`
      (compound-statement
         (definition a~2 `int` (42 `int`))
         (definition b~3 `int` (27 `int`))
         (return (add `int` (less-equal `int` (b~3 `int`) (a~2 `int`)) (less-equal `int` (b~3 `int`) (27 `int`)))))))

----- stderr -----
