panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__relational-ops__test_unsigned_greater.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/relational-ops/test_unsigned_greater.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/relational-ops/test_unsigned_greater.c"
   (function-definition external
      main~0 `fn() -> int`
      (compound-statement
         (definition a~2 `unsigned int` (noop-type-conversion `unsigned int` (42 `int`)))
         (definition b~3 `unsigned int` (noop-type-conversion `unsigned int` (27 `int`)))
         (return (add `int` (greater-equal `int` (a~2 `unsigned int`) (b~3 `unsigned int`)) (greater-equal `int` (a~2 `unsigned int`) (a~2 `unsigned int`)))))))

----- stderr -----
